deployment/app/overlays/beta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    ingress-nginx: classic
