deployment/app/overlays/beta/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    ingress: ingress-nginx
  annotations:
   healthcheck-path: /healthcheck
   healthcheck-success-status-code: "200"
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: test.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app
                port:
                  number: 80
  tls:
    - hosts: [ test.com ]
